src/objects/Apttus_Config2__SearchAttributeValue__c.object
<CustomObject>
    <description>Holds product search parameters and default values for line items</description>
    <fields>
        <fullName>Apttus_Config2__BaseProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated base product</description>
        <label>Base Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Search Attribute Values</relationshipLabel>
        <relationshipName>SearchAttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated category.</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
        <relationshipLabel>Search Attribute Values</relationshipLabel>
        <relationshipName>SearchAttributeValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <description>ID of the associated configuration</description>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Search Attribute Values</relationshipLabel>
        <relationshipName>SearchAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The default end date for a line item</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Family__c</fullName>
        <description>Search field to search by product family</description>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InterviewName__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <description>The name of the associated guided interview which uses the search attribute values (or answers) to build the search filter.</description>
        <label>Interview Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCode__c</fullName>
        <description>Search fiield for Product Code</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ResetFromGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to reset from global before using the search values. This flag is set to true when global values are modified. It is set to false when global values are set into the record.</description>
        <label>Reset From Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The default start date for a line item</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ValueType__c</fullName>
        <description>Specifies the search context.</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Search Attribute Value</label>
    <nameField>
        <label>Search Attribute Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>